@@ -14,6 +14,10 @@ ChangeLog for wpa_supplicant
 	  CONFIG_DELAYED_MIC_ERROR_REPORT=y in .config
 	* fixed EAP-AKA to use RES Length field in AT_RES as length in bits,
 	  not bytes
+	* updated OpenSSL code for EAP-FAST to use an updated version of the
+	  session ticket overriding API that was included into the upstream
+	  OpenSSL 0.9.9 tree on 2008-11-15 (no additional OpenSSL patch is
+	  needed with that version anymore)
 
 2008-11-01 - v0.6.5
 	* added support for SHA-256 as X.509 certificate digest when using the
