@@ -4,6 +4,10 @@ ChangeLog for hostapd
 	* added a new configuration option, wpa_ptk_rekey, that can be used to
 	  enforce frequent PTK rekeying, e.g., to mitigate some attacks against
 	  TKIP deficiencies
+	* updated OpenSSL code for EAP-FAST to use an updated version of the
+	  session ticket overriding API that was included into the upstream
+	  OpenSSL 0.9.9 tree on 2008-11-15 (no additional OpenSSL patch is
+	  needed with that version anymore)
 
 2008-11-01 - v0.6.5
 	* added support for SHA-256 as X.509 certificate digest when using the
